# rusttypes-py3

./: .buildinfo  .gitignore  LICENSE  README.md  genindex.html  index.html  installation.html  license.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: main.yml  pull.yml
_sources/: index.rst.txt  installation.rst.txt  license.rst.txt  modules.rst.txt
_sources/modules/result/: ok.rst.txt  result_exception.rst.txt
docs/source/: conf.py  index.rst  installation.rst  modules.rst  rustlike.rst
docs/source/modules/: misc.rst  traits.rst
docs/source/modules/option/: index.rst  nil.rst  option.rst  some.rst
docs/source/modules/result/: err.rst  index.rst  ok.rst  result.rst  result_exception.rst
docs/source/rustlike/misc/: index.rst
docs/source/rustlike/option/: nil.rst  option.rst
docs/source/rustlike/result/: index.rst  ok.rst  result.rst
modules/: misc.html  traits.html
modules/option/: index.html  nil.html  option.html  some.html
modules/result/: err.html  index.html  ok.html  result.html  result_exception.html
rustlike/: __init__.py  misc.py  option.py  result.py  traits.py
rusttypes/: __init__.py  option.py  result.py  traits.py
tests/: test_option.py  test_result.py  test_traits.py
