[tool.poetry]
name = "rusttypes"
version = "0.1.0"
description = "Extra Datatypes for Python 3"
authors = ["Hendrik Boeck <hendrikboeck.dev@protonmail.com>"]
readme = "README.md"
license = "BSD-3-Clause"
homepage = "https://hendrikboeck.github.io/rusttypes-py3"
repository = "https://github.com/hendrikboeck/rusttypes-py3"
documentation = "https://hendrikboeck.github.io/rusttypes-py3"
keywords = [
    "rusttypes",
    "rust",
    "result",
    "option",
    "types",
    "python",
    "datastructures",
    "datatypes",
    "collections",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
toml = "^0.10.2"
pylint = "^3.1.0"
pytype = { version = "^2022.1.3", python = "<3.11", markers = "platform_system != 'Windows'" }
pytest = "^8.1.1"
#sphinx = "<7.0.0"
sphinx = "^7.3.7"
qiskit-sphinx-theme = "^1.16.1"

[[tool.poetry_bumpversion.replacements]]
file = ["rusttypes/__init__.py"]
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""

[[tool.poetry_bumpversion.replacements]]
file = ["docs/source/conf.py"]
search = "release = '{current_version}'"
replace = "release = '{new_version}'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytype]
inputs = ["tests", "rusttypes"]
disable = []

[tool.pylint.'MESSAGES CONTROL']
fail-under = 9.0
disable = "C,R,W1401"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 100
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
]
ignore = ["UP007", "UP035"]
